fixed embed alignment in editor

--- a/styles/editor-style.css
+++ b/styles/editor-style.css
@@ -284,7 +284,7 @@ img {
 }
 
 .wp-block-embed {
-  margin: 1.5em 0;
+  margin: 1.5em auto;
 }
 
 .has-small-font-size {
